--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 </header>
 
 <div class="window-content">
-  <div class="result-table table-striped">
+  <div class="ngsmarttablediv table-striped">
     <ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
   </div>
 
