--- a/src/assets/css/photon.css
+++ b/src/assets/css/photon.css
@@ -124,7 +124,7 @@ th {
 * {
   cursor: default;
   -webkit-user-drag: text;
-  -webkit-user-select: none;
+  /*-webkit-user-select: none;*/
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -2218,6 +2218,9 @@ table {
   border-collapse: separate;
   font-size: 12px;
   text-align: left;
+  table-layout: fixed;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 
 thead {
