minor commit: saving work to check in office

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
       <ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
     </div>
 
-    <div *ngIf="showTree;">Tree view</div>
+    <div *ngIf="showTree;"> <h3>Function Coming soon! Tree view </h3> </div>
   </div>
 
 </div>
